@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.02" hostname="unknown" timestamp="2015-03-27T13:32:50">
+<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.019" hostname="unknown" timestamp="2015-03-31T22:42:32">
   <properties/>
   <testcase classname="test_errorfail_output" name="test_success">
     <error><![CDATA[Error in tear_down fixture:
