@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_failure_output" errors="1" failures="25" tests="26" time="0.33" hostname="unknown" timestamp="2015-03-27T13:32:51">
+<testsuite name="test_failure_output" errors="1" failures="25" tests="26" time="0.316" hostname="unknown" timestamp="2015-03-31T22:42:32">
   <properties/>
   <testcase classname="test_failure_output" name="test_empty">
     <failure><![CDATA[(no message available)
